<resources>
    <string name="app_name">MobileProgramming_termProject</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_community">Community</string>
    <string name="title_alarm">Alarm</string>
    <string name="title_map">Map</string>
    <string name="title_mypage">MyPage</string>
    <string name="title_menu">Menu</string>
    <string name="title_activity_food_category2">MainActivity</string>
    <string name="title_recipe">레시피 정보</string>
    <string name="title_bookmark">즐겨찾기 목록</string>
    <string name="title_searchResult">검색 결과</string>
    <string name="title_convenience_category">편의점 별 카테고리</string>
    <string name="title_recipe_category">레시피 목록</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="msg_token_fmt" translatable="false">토큰 %s</string>
    //Camera Activity
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    //

    //마이페이지 리스트뷰
    <string-array name="mypage_list">
        <item>스크랩</item>
        <item>내가 쓴 글</item>
        <item>내가 쓴 레시피</item>
        <item>내가 쓴 댓글</item>
        <item>로그 아웃</item>
    </string-array>

    //카테고리 이름 저장
    <string-array name="foodCategorySpinner">
        <item>기타류</item>
        <item>식사류</item>
        <item>음료류</item>
        <item>디저트류</item>
    </string-array>
    <string-array name="tagCategorySpinner">
        <item>없음</item>
        <item>다이어트</item>
        <item>벌크업</item>
        <item>당충전</item>
        <item>스트레스,HOT</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>