<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/menu"
        android:title="@string/title_menu" />
    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/community"
        android:title="@string/title_community" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/map"
        android:title="@string/title_map" />
    <item
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/mypage"
        android:title="@string/title_mypage" />



</menu>