<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mobileprogramming_termproject.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_mypage"
        android:name="com.example.mobileprogramming_termproject.ui.myPage.myPageFragment"
        android:label="@string/title_mypage"
        tools:layout="@layout/fragment_mypage" />

    <fragment
        android:id="@+id/navigation_alarm"
        android:name="com.example.mobileprogramming_termproject.ui.community.communityFragment"
        android:label="@string/title_community"
        tools:layout="@layout/fragment_alarm" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.mobileprogramming_termproject.ui.map.mapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />



</navigation>